# near-openai

./: .gitignore  LICENSE.md  README.md  api.entrypoint.js  client.js  discordbot.js  package.json  rollup-config.js  test.js  vercel.json
.github/workflows/: test-wasip2.yml
api/: edge.js  openai.js  openaistream.js
boswidget/: main.js  widget.bundle.jsx  widget.jsx  widgetiframe.html
boswidgets/askchatgpt/: main.js  rollup.config.js  widget.bundle.jsx  widget.jsx
boswidgets/groovemaker/: main.js  renderworker.js  widget.bundle.jsx  widget.jsx  widgetiframe.html
boswidgets/svgminter/: main.js  widget.bundle.jsx  widget.jsx  widgetiframe.html
client/: nearopenaiclient.js
fine-tune/: .gitignore  baseline.js  drumbeat.js  drumsandbase.js  drumsandbaseandguitar.js  drumsandbaseandguitar_e.js  jinglebells.js  jinglebells_w_bass.js  simpletrack.js  simpletrack_w_bass.js  wasmmusic.js
spec/: chunkparser.spec.js
wasip2/: .gitignore  Cargo.toml  README.md  spin.toml
wasip2/openai-proxy/: Cargo.toml
wasip2/openai-proxy/src/: lib.rs
wasip2/src/: lib.rs
wasip2/tests/: Cargo.toml
wasip2/tests/src/: lib.rs
wasip2/web/: index.html
